    of the build requirements contains each file listed.  (That is, if
    the file /usr/bin/perl has been found, and intltool:runtime is in
    the buildRequires list, and intltool:runtime requires perl, then the
    requirement is satisfied.)  This policy currently produces some false
    positives; the "greylist" that tries to remove false positives needs
    to be expanded.

Changes in 0.62.8:
  * The bug, introduced in 0.62.7, that caused Conary to stop short of
    recursing to the innermost troves when handling erasures has been fixed.
  * EnforceSonameBuildRequirements enhanced to use the system database to
    find the right missing build requirements.
  * Make users and groups in a repository such that they may not differ only
    in case, i.e. if user foo exists, user Foo cannot be created.
  * files in /usr/%(lib)s/python/.* are no longer automatically given an 
    architecture flavor - if there are architecture-specific files in those 
    dirs, they should result in an arch-specific flavor through normal
    means.
  * By default, no OpenPGP signatures will be added to troves when
    doing commits unless a fingerprint is explicitly set in conaryrc.
    Previously, if a keyring existed, the first key found would be used.

Changes in 0.62.7:
  * Some unneeded parts of the sql query in _getTroveList have been removed,
    improving performance.
  * The performance of the default (and most used) case of the
    getAllTroveLeaves has been increased up by using a specialized
    query.
  * Exception handling in the repository when revoked or expired keys
    are used has been corrected.
  * Signature checking now correctly checks the timestamp of the signature
    against the expiration time (if any) of the key that signed it.  If
    the signature timestamp is later than the expiration timestamp,
    the signature is rejected.
  * Pass 'Database is locked' repository errors to the client as a